Login and main route secured

--- a/client/src/assets/css/App.css
+++ b/client/src/assets/css/App.css
@@ -1,7 +1,17 @@
 .page{
   display: flex;
-  gap: 100px;
 }
 .red{
   color:red
+}
+.homepage-content{
+  padding:50px
+}
+.login-form{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: 75vh;
+  gap: 10px;
+
 }
