--- a/client/src/assets/css/Login.css
+++ b/client/src/assets/css/Login.css
@@ -1,16 +1,10 @@
+@import "vars.css";
 body{
-  background-color: #382E4B;
+  background-color: var(--body-background-color, blue);
   color: white;
   padding: 20px;
 }
-.login-form{
-  text-align: center;
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
 
-}
 .logo{
   max-width: 230px;
 
@@ -25,7 +19,7 @@ body{
   padding:8px 15px;
   font-size: larger;
   border-radius: 4px;
-  border: none
+  border: var(--input-border);
 }
 button{
   padding:10px;
