--- a/client/src/assets/css/Login.css
+++ b/client/src/assets/css/Login.css
@@ -6,14 +6,39 @@ body{
 }
 
 .logo{
+  display: flex;
   max-width: 230px;
+  margin:auto;
+  justify-content: center;
+  margin-bottom: 2rem;
+}
+.login-page{
+  display:block;
+  max-width: 33vw;
+  min-width: fit-content;
+  margin: auto;
+}
+.login-form{
+  display: grid ;
+  gap: 20px;
+  background:white;
+  padding:2rem;
+  border-radius: 2rem;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2)
+}
+@media (min-width:470px) {
+  .login-form{
+    grid-template-columns: repeat(2, minmax(0, 1fr));  
+  }
+}
+.login-title{
+  grid-column: 1/-1;
+  color: var(--main-color) ;
+}
 
-}
-.h1{
-  font-size: 40px;
-}
 .login-form input{
-  margin: 20px;
+  border: solid 1.5px var(--gray-20);
+  border-radius: 0.5rem;
 }
 .text-input{
   padding:8px 15px;
@@ -22,6 +47,15 @@ body{
   border: var(--input-border);
 }
 button{
-  padding:10px;
-  width: 100px;
+  grid-column: 1/-1;
+  background: var(--main-color);
+  color: white;
+  font-size: 1rem;
+  border-radius: 1rem;
+  padding: 1rem 2rem;
+  display: inline-block;
+  width: auto;
+}
+.login-label{
+  color: var(--main-color);
 }
