--- a/client/src/assets/css/Register.css
+++ b/client/src/assets/css/Register.css
@@ -1,15 +1,51 @@
-.register-form{
-  display: flex ;
-  flex-direction: column;
-  align-items: center;
-  align-content: center;
-  gap: 20px;
-}
-.text-input{
-  width: 200px;
-}
+@import "vars.css";
+
 .register-page{
-  display:flex;
-  text-align: center;
-  margin-left: 40vw;
+  display:block;
+  max-width: 33vw;
+  min-width: fit-content;
+  margin: auto;
+}
+.register-form{
+  display: grid ;
+  gap: 20px;
+  background:white;
+  padding:2rem;
+  border-radius: 2rem;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2)
+}
+@media (min-width:470px) {
+  .register-form{
+    grid-template-columns: repeat(2, minmax(0, 1fr));  
+  }
+}
+  
+.register-form .title{
+  grid-column: 1/-1;
+  color: var(--main-color) ;
+}
+.register-form input {
+  border: solid 1.5px var(--gray-20);
+  border-radius: 0.5rem;
+}
+.register-button{
+  grid-column: 1/-1;
+  background: var(--main-color);
+  color: white;
+  font-size: 1rem;
+  border-radius: 1rem;
+  padding: 1rem 2rem;
+  display: inline-block;
+  width: auto;
+}
+.date-input{
+    background-color:white;
+    border: solid 1px var(--main-color);
+    color: var(--gray-20);
+    padding: 15px;
+    font-family: "Roboto Mono",monospace;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    border-radius: 5px;
 }
