--- a/client/src/assets/css/vars.css
+++ b/client/src/assets/css/vars.css
@@ -7,6 +7,7 @@
   --gray-40: hsl(0, 0%, 35%);
   --gray-50: hsl(0, 0%, 25%);
   --body-background-color: #382E4B;
+  --green-20: #74b676; 
 
   --input-border: 1px solid var(var(--gray-20));
 
