--- a/client/src/assets/css/vars.css
+++ b/client/src/assets/css/vars.css
@@ -12,6 +12,7 @@
   --gray-30: hsl(0, 0%, 55%);
   --gray-40: hsl(0, 0%, 35%);
   --gray-50: hsl(0, 0%, 25%);
+  --gray-50: hsl(0, 0%, 2%);
   --body-background-color: #382E4B;
   --body-background-color-20: #60586f;
   --body-background-color-30: #888293;
