v.0.6.32- animation package and bugfixes

--- a/client/src/assets/css/LandingPage.css
+++ b/client/src/assets/css/LandingPage.css
@@ -71,3 +71,9 @@ body {
   border: 1px solid white ;
   margin: 5px ;
 }
+.app-section .arrow-btn{
+  width: 40px;
+  background-color: black ;
+  border: 1px solid white ;
+  margin: 5px ;
+}
