--- a/client/src/assets/css/Login.css
+++ b/client/src/assets/css/Login.css
@@ -52,6 +52,7 @@ body{
   font-size: larger;
   border-radius: 4px;
   border: var(--input-border);
+  width: 235px;
 }
 button{
   grid-column: 1/-1;
@@ -62,6 +63,10 @@ button{
   padding: 1rem 2rem;
   display: inline-block;
   width: auto;
+}
+.input-icon{
+  display: flex;
+  align-items: center;
 }
 .login-label{
   color: var(--main-color);
