--- a/client/src/assets/css/Dashboard.css
+++ b/client/src/assets/css/Dashboard.css
@@ -5,7 +5,7 @@
   gap: 40px;
 }
 .dashboard-box{
-  background-color: var(--body-background-color-20);
+  background-color:  rgb(78 76 87 / 58%);;
   border-radius: 8px;
   display: flex;
   width: 520px;
@@ -19,7 +19,7 @@
   justify-content: center;
   gap: 100px;
   margin: auto;
-  background-color: var(--body-background-color-20);
+  background-color:  rgb(78 76 87 / 58%);;
   border-radius: 16px;
   margin-bottom: 50px;
 }
