--- a/client/src/assets/css/bar.css
+++ b/client/src/assets/css/bar.css
@@ -5,7 +5,7 @@
   margin-bottom: 40px;
   width: 1000px;  
   border: 1px solid var(--gray-20);
-  background-color: rgb(78 76 87 / 58%);
+  background-color: var(--content-background);
   border-radius: 7px;
   padding: 10px;
   margin-top:30px
