--- a/client/src/assets/css/bar.css
+++ b/client/src/assets/css/bar.css
@@ -31,8 +31,15 @@
 }
 .widgets{
   display: flex;
+  flex-direction: column;
   text-align: center;
   justify-content: center;
-  gap: 100px;
-  margin: auto;
+
+}
+.accordion-summary{
+  display: flex;
+  gap: 10;
+  justify-content: center;
+  align-items: center;
+
 }
