--- a/client/src/assets/css/bar.css
+++ b/client/src/assets/css/bar.css
@@ -38,8 +38,8 @@
 }
 .accordion-summary{
   display: flex;
-  gap: 10;
+  gap: 50px;
   justify-content: center;
   align-items: center;
-
+  text-align: center;
 }
