--- a/client/src/assets/css/Widget.css
+++ b/client/src/assets/css/Widget.css
@@ -1,18 +1,12 @@
 .well-box{
-  padding: 20px;
-  text-align: center;
-  padding: 5px;
+  display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 5px;
+    gap: 30px;
 }
-.well-widget{
-  
-  text-align: center;
-  margin: auto;
-  align-self: center;
-  width: 90px;
-  border-radius: 100%;
-  margin-top: 20px; 
-  margin-bottom: 20px; 
-}
+
 .text{
   max-width: 140px;
   text-align: center;
