--- a/client/src/assets/css/Results.css
+++ b/client/src/assets/css/Results.css
@@ -3,23 +3,16 @@
 .main-div{
   display: flex;
   border: 1px solid var(--gray-20) ;
-  height: 60vh;
-}
-.left-div{
-  border: 1px solid var(--gray-20);
-  width: 50%;
-  vertical-align: center;
+  height: 25vh;
+  gap: 20px;
   justify-content: center;
   text-align: center;
+  align-items: center;
 }
-.right-div{
-  display:flex;
-  flex-direction: column;
-  border: 1px solid var(--gray-20);
-  width: 50%;
-}
-.left-div p{
-  text-align: center;
 
+.chart-box{
+  display: flex;
+  width: 850px;
+  height: 150px;
 }
 
