--- a/client/src/assets/css/Results.css
+++ b/client/src/assets/css/Results.css
@@ -10,6 +10,10 @@
   align-items: center;
 }
 
+.main-div + .main-div{
+  margin-top: 40px ;
+}
+
 .chart-box{
   display: flex;
   height: 230px;
@@ -18,4 +22,18 @@
 .chart-box.MuiBox-root.css-0{
   width: 90%;
 }
+
+.blue{
+  background-color: blue;
+  height: 40px;
+  width: 40px;
+  border-radius: 5px;
+}
+.purple{
+  background-color: peru;
+  height: 40px;
+  width: 40px;
+  border-radius: 5px;
+}
+
 
