--- a/client/src/assets/css/Dashboard.css
+++ b/client/src/assets/css/Dashboard.css
@@ -2,28 +2,28 @@
 
 .dashboard-row{
   display: flex;
-  gap: 40px;
+  flex-direction: column;
+  gap: 2rem;
 }
 .dashboard-box{
-  background-color:  rgb(78 76 87 / 58%);;
+  background-color:  var(--body-background-color-20);
   border-radius: 8px;
   display: flex;
-  width: 520px;
-  gap: 50px;
-  padding: 10px;
-  margin-top: 50px;
-  height: 300px;
+  width: 100%;
+  min-height: 300px;
+  padding: 1rem;
 } 
+.dashboard-box > canvas{
+  width: 100%!important;
+}
 .dashboard-typography{
   margin-top: 50px;
 }
 
-.dashboard-widgets{
-  display: flex;
-  flex-direction: column;
-  background-color: var(--content-background);
-  text-align: center;
-  justify-content: center;
-  align-items: center;
+@media (min-width: 768px) {
+  .dashboard-row{
+    flex-direction: row;
+  }
 }
+
 
