--- a/client/src/assets/css/index.css
+++ b/client/src/assets/css/index.css
@@ -38,12 +38,10 @@ code {
 .content > .content-box > *{
   padding: 1rem 2.5rem;
 }
-.content .page-title{
-  /* position: sticky;
-  top:0;
-  z-index: 10; */
-}
 
+*{
+  box-sizing: border-box;
+}
 
 ::-webkit-scrollbar {
   width: 10px;
@@ -59,6 +57,12 @@ code {
 }
 
 
+
+
+
+
+
+
 /* Utilities */
 
 /* TYPOGRAPHY */
@@ -71,11 +75,20 @@ code {
   white-space: nowrap;
 }
 
+p .MuiSvgIcon-root{
+  font-size: inherit;
+  vertical-align: bottom;
+}
 
 /* DISPLAY */
 
 .d-flex{
   display: flex;
+}
+
+.d-col{
+  display: flex;
+  flex-direction: column;
 }
 
 .j-c-start{
@@ -116,4 +129,35 @@ code {
 }
 .gap-32{
   gap: 32px;
+}
+
+.w-10{
+  width: 10%;
+}
+.w-20{
+  width: 20%;
+}
+.w-30{
+  width: 30%;
+}
+.w-40{
+  width: 40%;
+}
+.w-50{
+  width: 50%;
+}
+.w-60{
+  width: 60%;
+}
+.w-70{
+  width: 70%;
+}
+.w-80{
+  width: 80%;
+}
+.w-90{
+  width: 90%;
+}
+.w-100{
+  width: 100%;
 }
