--- a/client/src/scenes/Education/Education.css
+++ b/client/src/scenes/Education/Education.css
@@ -1,8 +1,5 @@
 @import "../../assets/css/vars.css";
 
-.education-container {
-  margin-top: 40px;
-}
 
 .education-section {
   margin-bottom: 40px;
@@ -15,7 +12,6 @@
 }
 
 .education-section p {
-  font-size: 16px;
   line-height: 1.5;
   margin-bottom: 16px;
 }
@@ -27,14 +23,30 @@
 }
 
 .education-section li {
-  font-size: 16px;
   line-height: 1.5;
 }
 a{
-  color: white;
+  color: var(--link-color);
   text-decoration: none;
 }
 a:hover{
-  color: var(--main-color-20)
+  color: var(--text-color);
+  text-decoration: underline;
+
 }
 
+.education-container p,
+.education-container h1,
+.education-container h2,
+.education-container h3,
+.education-container h4,
+.education-container h5,
+.education-container h6,
+.education-container > span{
+  max-width: 750px;
+}
+.education-section__video > div{
+  width: 100%!important;
+  height: auto!important;
+  aspect-ratio: 640 / 360!important;
+}
